Fix output being aligned center on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -123,7 +123,7 @@ body
     vertical-align: middle;
 
     height: $input-height-mobile;
-    width: 4 * #{$button-height-mobile}; // width of 4 buttons
+    width: 4 * $button-height-mobile; // width of 4 buttons
 
     @include desktop
     {
